[package]
name = "scrape_dontorrent_domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking"]}
toml = "0.8.8"
url = "2.5.0"
serde = "1.0.196"
serde_derive = "1.0.196"
#reqwest = { version = "0.11.12", features = ["json", "multipart", "blocking"], default-features = false }
scraper = "0.12.0"
serde_json = "1.0.86"
regex = "1.10.3"
